gccida/g1/get_attr_mode
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/insn-attrtab.c:17237:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode  get_attr_mode( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/insn-attrtab.c:17240:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/insn-attrtab.c:17263:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/insn-attrtab.c:17268:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 17669, "get_attr_mode"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/insn-attrtab.c:17268:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 17669, "get_attr_mode"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/insn-attrtab.c:17790:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v13 = aligned_operand( recog_data_0.operand[1], HImode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/insn-attrtab.c:17806:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( aligned_operand( recog_data_0.operand[1], HImode) || ( v16 = x86_movx, !_bittest( &v16, ix86_cpu)) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/insn-attrtab.c:17863:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v4 = q_regs_operand( recog_data_0.operand[0], QImode); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_mode/src/obj/insn-attrtab.o] Error 1
